--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interview Formatter — Notion Ready</title>
+  <title>인터뷰 속기 도우미 — Notion Ready</title>
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <script src="https://cdn.jsdelivr.net/npm/mammoth@1.6.0/mammoth.browser.min.js"></script>
   <style>
@@ -82,7 +82,7 @@
             </label>
           </div>
           <div class="buttons">
-            <button class="primary" id="formatBtn">포맷하기</button>
+            <button class="primary" id="formatBtn">실행하기</button>
             <button id="copyBtn">클립보드 복사</button>
             <button id="downloadBtn">TXT로 다운로드</button>
             <button id="clearBtn">초기화</button>
