--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
       <div class="row">
         <div class="col">
           <div id="drop" class="drop">여기에 <b>.txt</b> 또는 <b>.docx</b> 파일을 드롭하세요<br>또는 아래 입력칸에 직접 붙여넣기</div>
-          <textarea id="input" placeholder="예)\n안녕하세요 저는 손명균입니다.\n아 네 안녕하세요.\n\n저의 과는 기계공학과입니다.\n아 그렇군요."></textarea>
+          <textarea id="input" placeholder="예)안녕하세요 저는 손명균입니다.
+아 네 안녕하세요.
+          
+저의 과는 기계공학과입니다.
+아 그렇군요."></textarea>
           <div class="controls">
             <label>블록 구분자
               <select id="separator">
