--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="app">
     <div class="card">
-      <h1>Interview Formatter <span class="pill">Notion-ready</span></h1>
+      <h1>인터뷰 속기 도우미 <span class="pill">Notion-ready</span></h1>
       <div class="sub">TXT/Word(.docx) 속기를 드래그‑드롭하거나 붙여넣기 → 아래 규칙으로 자동 포맷: <span class="mono">#1</span> 블록 번호, 각 줄은 따옴표로 감싸기, 블록 사이에는 보이지 않는 구분자 넣기.</div>
 
       <div class="row">
